fix(jquery ui): configura z-index pra modal overlay
Sem esta regra, os overlays de modal estavam ficando abaixo da navbar,
por exemplo.

--- a/src/styles/jquery.ui.less
+++ b/src/styles/jquery.ui.less
@@ -420,6 +420,10 @@
 }
 
 /* Overlays */
+.ui-front {
+  z-index: @zindex-jq-overlay;
+}
+
 .ui-widget-overlay {
   background: @jq-overlay;
   .opacity( .5 );
